# CleanCode

./: .flake8  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CI_WORKFLOW_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  check_ollama.py  code_enhancer.py  prompt_filter.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  software_enhancer.py  test_analyzer.py  test_prompt_filter.py
ENHANCER/: __init__.py  ai_interface.py  analyze.py  cli.py  code_analyzer.py  config.py  core.py  gui.py  list_models.py  models.py  utils.py
ENHANCER.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
analysis_reports/: analysis_20250207_225225.txt  analysis_20250207_225332.txt  enhanced_20250207_225225.py  enhanced_20250207_225332.py
software_enhancer/: __init__.py  config.py  enhancement_pipeline.py  file_processor.py  gui.py  main.py  queue_manager.py
test/: calculator.py
tests/: __init__.py  test_code_analyzer.py  test_config.py  test_models.py  test_sample_code.py  test_utils.py
vscode-extension/: CHANGELOG.md  README.md  VSCODE_EXTENSION_SUMMARY.md  package.json
vscode-extension/src/: analyzer.ts  diagnostics.ts  extension.ts  statusBar.ts
vscode-extension/src/providers/: metricsProvider.ts  modelsProvider.ts  resultsProvider.ts
